2008-06-25  Mike Kestner <mkestner@novell.com> 

	* libsteticui/Application.cs: use resolver.
	* libsteticui/ApplicationBackend.cs: use resolver. 
	* libsteticui/AssemblyResolver.cs: integrate ImportContext. remove
	usused method and field resolution methods.
	* libsteticui/AssemblyWidgetLibrary.cs: refactor ImportContext. 
	use cached objects doc.
	* libsteticui/CecilWidgetLibrary.cs: refactor to use cached docs
	and assembly resolver.
	* libsteticui/LibraryCache.cs: add document props for objects/gui.
	add objects and gui resource extraction and caching. Refresh using
	resolver if available.
	* libsteticui/ProjectBackend.cs: ImportContext refactor to resolver.

2008-06-19  Mike Kestner <mkestner@novell.com> 

	* configure.in: detect cecil and substitute the dll path.
	* libsteticui/Makefile.am: build using installed dll.
	* libsteticui/lib/Mono.Cecil.dll: remove

2008-06-19  Mike Kestner <mkestner@novell.com> 

	* libsteticui/AssemblyWidgetLibrary.cs: refactor to use LibraryCache.
	* libsteticui/CecilWidgetLibrary.cs: use singleton Cache. Refine 
	NeedsReload.  Call Load (XmlDocument) conditionally.
	* libsteticui/LibraryCache.cs: hide Load and expose a singleton Cache
	field to share between AssemblyWidgetLibrary and CecilWidgetLibrary.
	Remove Gtk reference checking, we will use explicit ToolboxItem attrs
	instead.  Make HasWidgets a check for an objects.xml file, since we
	will be constructing one for attr-only assemblies.

2008-06-18  Mike Kestner <mkestner@novell.com> 

	* libstetic/WidgetLibrary.cs: refactor class addition logic from Load
	into a protected AddClass method which subclasses can use to add
	classes marked with [ToolboxItem].

2008-06-18  Mike Kestner <mkestner@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs: remove timestamp code and reuse 
	cache currency logic. flatten out an unnecessary if branch in Load.

2008-06-18  Mike Kestner <mkestner@novell.com> 

	* libsteticui/Application.cs: remove dead code
